 cnp-mitre-t1552-block-cloud-instance-metadata-access-from-pods-xqc3l9e.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "cnp-mitre-t1552-block-cloud-instance-metadata-access-from-pods"-01i9-9r
  namespace: default
spec:
  description: "The policy will block access to cloud metadata ips from containers"
  endpointSelector:
    matchLabels:
      release: jupyter-hub
      app: jupyterhub
      component: continuous-image-puller
      controller-revision-hash: 56bc99b8f5
      pod-template-generation: 1
  egress:
  - toCIDRSet:
    - cidr: 0.0.0.0/0
      except:
      - 169.254.169.254/32
      - 169.254.170.2/32
